# root-finding-reliability-framework

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
numerical-ui/src/: App.js  BackendStatusBadge.js  BackendWarmupPanel.js  ExperimentJobs.js  ExperimentsDashboard.js  Home.js  RunViewer.js  api.js  apiStatus.js  useBackendWarmup.js
src/numerical_lab/: api.py
src/numerical_lab/analytics/: audit_consistency.py  failure_analysis.py  interpretation.py  monte_carlo_analytics.py  problem_expectations.py  root_clustering.py  root_coverage.py  sweep_analytics.py
src/numerical_lab/benchmarks/: benchmark_types.py  catalog.py
src/numerical_lab/diagnostics/: boundaries.py  convergence.py  stability.py
src/numerical_lab/engine/: controller.py
src/numerical_lab/experiments/: detect_basin_boundaries.py  discover_roots.py  monte_carlo.py  plot_basin_map.py  sweep.py
src/numerical_lab/methods/: hybrid.py  newton.py  safeguarded_newton.py
src/numerical_lab/services/: experiment_jobs.py  experiments_service.py  sampling.py
