[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GRASP"
version = "0.1.0"
description = "GRASP — Solver Reliability Analysis & Validation Framework"
authors = [{name="Krishna Vedula"}]
dependencies = []

[project.scripts]
numerical-lab = "numerical_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]